implements and closes #71 and implements and closes #72

--- a/docs/changelog.tex
+++ b/docs/changelog.tex
@@ -55,6 +55,9 @@
     \change{Fixed \dac{exec} so that it now can take paragraphs (made it \dac{long})}
     \change{Added point system}
     \change{Fixed bug where vertical space would remain when intro environment hidden}
+    \change{\dac\DeclareExerciseCommand now takes args}
+    \change{Keys sent to \dac\makeset can now be sent to \dac\buildset and \dac\buildsets}
+    \change{Introducing \dac\makesetdefaults}
 \chlogtable
 
 
