--- a/release/exercisebank-doc.tex
+++ b/release/exercisebank-doc.tex
@@ -1,5 +1,5 @@
-%% exercisebank v0.2.1-prereleaseb93 - 2018/09/10
-%% The LaTeX package exercisebank - version v0.2.1-prerelease (2018/09/10) build 93
+%% exercisebank v0.2.1-prereleaseb94 - 2018/09/12
+%% The LaTeX package exercisebank - version v0.2.1-prerelease (2018/09/12) build 94
 %% Manual/Documentation for exercisebank.sty
 %% -------------------------------------------------------------------------------------------
 %% Copyright (c) 2018 by Andreas Storvik Strauman
@@ -94,8 +94,12 @@
 \definecolor{green(munsell)}{rgb}{0.0, 0.70, 0.47}
 \def\defnew#1{\tcbdocmarginnote{\bfseries{\color{green(munsell)}New:}#1}}
 
-\let\dac\docAuxCommand
-\def\mdac#1{\docAuxCommand{\expandafter\@gobble\string#1}}
+\newcommand{\removebs}[1]{\if#1\@backslashchar\else#1\fi}
+\begingroup\lccode`\|=`\\
+\lowercase{\endgroup\def\removebs#1{\if#1|\else#1\fi}}
+\newcommand{\macroname}[1]{\expandafter\removebs\string#1}
+\def\dac#1{\docAuxCommand{\macroname{#1}}}
+\let\mdac\dac
 
 \makeatother
 
@@ -115,7 +119,7 @@
 
 
 \setlength{\parindent}{0pt}
-\title{{exercisebank - manual\\ v0.2.1-prerelease{\\[-0.5em]\footnotesize(build 93)}}}
+\title{{exercisebank - manual\\ v0.2.1-prerelease{\\[-0.5em]\footnotesize(build 94)}}}
 \author{Andreas Strauman}
 \begin{document}
 \maketitle
@@ -314,6 +318,28 @@ Inside the \dac{keyRef}\{exercise directory\}, you keep your exercises. Inside t
 Sometimes you'd want to introcude your exercises and tell a little bit about it. Maybe have a figure there also. Those things should go inside this environment. This can be treated as a problem in terms of counting. See \refCom{makeset} for more info.
 \end{docEnvironment}
 \filbreak\subsection{Making sets}
+\begin{docCommand}{makesetdefaults}{\marg{nohead|intro}}\addcontentsline{toc}{subsubsection}{\refCom{makesetdefaults}}
+\defnew{v0.2.1-prerelease\\2018/09/12 }
+ Sets the default arguments to all makeset-keys.
+e.g.
+\begin{dispListing}
+\makesetdefaults{intro}
+\end{dispListing}
+Will effectively make all
+\begin{dispListing}
+\makeset{...}{...}
+\end{dispListing}
+into
+\begin{dispListing}
+\makeset[intro]{...}{...}
+\end{dispListing}
+However, you can override this;
+\begin{dispListing}
+\makesetdefaults{intro}
+\makeset[nointro]{...}{...}
+\end{dispListing}
+(the \oarg{nointro} overrides the default \meta{intro} setting)
+\end{docCommand}
 \begin{docCommand}{spritesets}{\marg{setlist}}\addcontentsline{toc}{subsubsection}{\refCom{spritesets}}
 
  This is a command that is used by sprite to determine what sets are shown in sprite. If this is not given, sprite uses all sets given in \dac{makset}
@@ -338,18 +364,25 @@ exercise, explaining short what the exercise is about. It's only visible when us
  inside one page. Defaults to 4
  \begin{marker}If \dac{sprite} is used, it should be the only command in \dac{begin}\{document\}\dac{end}\{document\}\end{marker}
 \end{docCommand}
-\begin{docCommand}{exclude}{\marg{exerciseFileName}\marg{Comma separated numbers}}\addcontentsline{toc}{subsubsection}{\refCom{exclude}}
-\updated{v0.2.0\\2018/07/21 }
-As you can see in the intro section of the documentation, this is for excluding partproblems
-To be used in \refCom{makeset}
+\begin{docCommand}{exec}{\marg{macros}}\addcontentsline{toc}{subsubsection}{\refCom{exec}}
+\updated{v0.2.1-prerelease\\2018/09/12 }
+You can use this in \dac{makeset} to execute commands between problems.
+E.g. to insert a new page in between two problems when using nohead:
+\begin{dispListing}
+\makeset[nohead]{2}{\phead,my/exercise,\exec{\clearpage},next/exercise}
+\end{dispListing}
 \end{docCommand}
-\begin{docCommand}{select}{\marg{exerciseFileName}\marg{Comma separated numbers}}\addcontentsline{toc}{subsubsection}{\refCom{select}}
-\updated{v0.2.0\\2018/07/21 }
-As you can see in the intro section of the documentation, this is for cherry picking partproblems
-To be used in \refCom{makeset}
-\end{docCommand}
-\begin{docCommand}{DeclareExerciseCommand}{\marg{command}\marg{actions}}\addcontentsline{toc}{subsubsection}{\refCom{DeclareExerciseCommand}}
-\defnew{v0.2.0\\2018/07/21 }
+\begin{docCommand}{DeclareExerciseCommand}{\marg{command}\oarg{numargs}\marg{actions}}\addcontentsline{toc}{subsubsection}{\refCom{DeclareExerciseCommand}}
+\updated{v0.2.1-prerelease\\2018/09/12 }
+Now, use similar to newcommand. Does not support default arguments yet, but plans to.
+The old way of defining still works:
+\begin{dispListing}
+\DelcareExerciseCommand{\pbreak}\brackets{\clearpage}
+\end{dispListing}
+and
+\begin{dispListing}
+\DelcareExerciseCommand{\ptitle}[1]\brackets{\Large\textbf{#1}}
+\end{dispListing}
 This can be used later in makesets. E.g.
 \dac{DelcareExerciseCommand}\{\dac{pbreak}\}\brackets{\dac{clearpage}} will make
 \dac{pbreak} behave like \dac{clearpage} in the set:
@@ -362,12 +395,27 @@ This can be used later in makesets. E.g.
 }
 \end{dispListing}
 \end{docCommand}
-\begin{docCommand}{exec}{\marg{macros}}\addcontentsline{toc}{subsubsection}{\refCom{exec}}
-\updated{v0.2.1-prerelease\\2018/09/10 }
-You can use this in \dac{makeset} to execute commands between problems.
-E.g. to insert a new page in between two problems when using nohead:
+\begin{docCommand}{exclude}{\marg{exerciseFileName}\marg{Comma separated numbers}}\addcontentsline{toc}{subsubsection}{\refCom{exclude}}
+\updated{v0.2.0\\2018/07/21 }
+As you can see in the intro section of the documentation, this is for excluding partproblems
+To be used in \refCom{makeset}
+\end{docCommand}
+\begin{docCommand}{select}{\marg{exerciseFileName}\marg{Comma separated numbers}}\addcontentsline{toc}{subsubsection}{\refCom{select}}
+\updated{v0.2.0\\2018/07/21 }
+As you can see in the intro section of the documentation, this is for cherry picking partproblems
+To be used in \refCom{makeset}
+\end{docCommand}
+\begin{docCommand}{orderedselect}{}\addcontentsline{toc}{subsubsection}{\refCom{orderedselect}}
+\defnew{v0.2.1-prerelease\\2018/09/12 }
+\end{docCommand}
+\begin{docCommand}{buildset}{\oarg{intro|nohead|nointro}\marg{setname}}\addcontentsline{toc}{subsubsection}{\refCom{buildset}}
+\updated{v0.2.1-prerelease\\2018/09/12 }
+This command runs the set given. The set has do be defined by \dac{makeset}. E.eg
 \begin{dispListing}
-\makeset[nohead]{2}{\phead,my/exercise,\exec{\clearpage},next/exercise}
+\makeset{myExerciseSet}{exercisefile1, \select{exercisefile2}{1,2}}
+\!begin{document}
+  \buildset{myExerciseSet}
+\!end{document}
 \end{dispListing}
 \end{docCommand}
 \begin{docCommand}{setName}{}\addcontentsline{toc}{subsubsection}{\refCom{setName}}
@@ -385,15 +433,15 @@ The following example prints "Exercise set number 1" and "Exercise set number 2"
 \end{document}
 \end{dispListing}
 \end{docCommand}
-\begin{docCommand}{buildsets}{\marg{list}}\addcontentsline{toc}{subsubsection}{\refCom{buildsets}}
-\defnew{v0.2.0\\2018/07/21 }
+\begin{docCommand}{buildsets}{\oarg{intro|nohead|nointro}\marg{list}}\addcontentsline{toc}{subsubsection}{\refCom{buildsets}}
+\updated{v0.2.1-prerelease\\2018/09/12 }
 This command will generate multiple sets:
 \begin{dispListing}
 \buildsets{set,set2,set3}
 \end{dispListing}
 \end{docCommand}
 \begin{docCommand}{buildtags}{\marg{tagslist}\marg{setslist}}\addcontentsline{toc}{subsubsection}{\refCom{buildtags}}
-\defnew{v0.2.1-prerelease\\2018/09/10 }
+\defnew{v0.2.1-prerelease\\2018/09/12 }
 This command will generate multiple sets:
 \begin{dispListing}
 \buildsets{tag,tag2,tag3}{set,set2,set3}
@@ -415,20 +463,20 @@ Reference a partproblem created by \dac{pplabel}\{\meta{label\}}. This prints e.
 You can do a lot of configurations on this package, and probably
  even more to come in later versions!
 \begin{docCommand}{ShowNumbers}{}\addcontentsline{toc}{subsubsection}{\refCom{ShowNumbers}}
-\updated{v0.2.1-prerelease\\2018/09/10 }
+\updated{v0.2.1-prerelease\\2018/09/12 }
  Shows the numbers in fron of the part problems and intros that should be used with
  \dac{exclude} and \dac{select}
 \end{docCommand}
 \begin{docCommand}{ShowTags}{}\addcontentsline{toc}{subsubsection}{\refCom{ShowTags}}
-\defnew{v0.2.1-prerelease\\2018/09/10 }
+\defnew{v0.2.1-prerelease\\2018/09/12 }
  Shows the tags in front of the part problems much like \dac{ShowNumbers}
 \end{docCommand}
 \begin{docCommand}{ShowFilenames}{}\addcontentsline{toc}{subsubsection}{\refCom{ShowFilenames}}
-\defnew{v0.2.1-prerelease\\2018/09/10 }
+\defnew{v0.2.1-prerelease\\2018/09/12 }
  Shows the path+filename to the current exercise file
 \end{docCommand}
-\begin{docCommand}{exercisebanksetup}{\marg{[key/values]}}\addcontentsline{toc}{subsubsection}{\refCom{exercisebanksetup}}
-\updated{v0.2.1-prerelease\\2018/09/10 }
+\begin{docCommand}{exercisebanksetup}{\marg{\oarg{key/values}}}\addcontentsline{toc}{subsubsection}{\refCom{exercisebanksetup}}
+\updated{v0.2.1-prerelease\\2018/09/12 }
  Here is a list of the different keys and their meaning
 \keyDef{part problems}{On/Off}{On}{
  This is whether or not to do part problems. E.g. 1a), 1b) etc.
@@ -527,7 +575,7 @@ The Norwegian translation would then be done with
 \end{docCommand}
 \filbreak\subsection{Problem options and tagging}
 \begin{docCommand}{nextproblem}{}\addcontentsline{toc}{subsubsection}{\refCom{nextproblem}}
-\defnew{v0.2.1-prerelease\\2018/09/10 }
+\defnew{v0.2.1-prerelease\\2018/09/12 }
 Prior to a problem environment in an exercise file you can pass options
 using the \dac{nextproblem} command. If you e.g. wanted to hide one regardless
 of what set it is you'd do
@@ -572,7 +620,7 @@ Here are the \dac{nextproblem} keys:
 
 \filbreak\subsection{Triggers}
 \begin{docCommand}{Trigger}{\marg{Any Macro}}\addcontentsline{toc}{subsubsection}{\refCom{Trigger}}
-\updated{v0.2.1-prerelease\\2018/09/10 }
+\updated{v0.2.1-prerelease\\2018/09/12 }
  See \refCom{At}\\
  Available triggers:\\
 \dac{Trigger}\dac{PartProblemHeaderSuffix}:\\ Triggers after the part problem header.
@@ -608,7 +656,7 @@ where the package should be looking for exercises. Default is the same directory
 \end{docCommand}
 This package also includes some extra stuff. For example the \dac{At} and \dac{Trigger}
 \begin{docCommand}{At}{\marg{AnyMacro}}
-\updated{v0.2.1-prerelease\\2018/09/10 }Here you can send any macro because it isn't evaluated! For example \dac{At}\dac{BeginSomething} is fine and even if \dac{BeginSomething} is not defined. Also and when using \dac{Trigger} it just ignores it if it didn't exist. It's pretty similar in function as to \dac{AtBeginDocument}.
+\updated{v0.2.1-prerelease\\2018/09/12 }Here you can send any macro because it isn't evaluated! For example \dac{At}\dac{BeginSomething} is fine and even if \dac{BeginSomething} is not defined. Also and when using \dac{Trigger} it just ignores it if it didn't exist. It's pretty similar in function as to \dac{AtBeginDocument}.
 \begin{dispListing}
  \At\BeginSomething{DoSomething}
  Which is triggered with
@@ -666,6 +714,7 @@ Distance above Problem \# header
 \addcontentsline{mac}{macro}{\refCom{ShowTags}}{}
 \addcontentsline{mac}{macro}{\refCom{Trigger}}{}
 \addcontentsline{mac}{macro}{\refCom{about}}{}
+\addcontentsline{mac}{macro}{\refCom{buildset}}{}
 \addcontentsline{mac}{macro}{\refCom{buildsets}}{}
 \addcontentsline{mac}{macro}{\refCom{buildtags}}{}
 \addcontentsline{mac}{macro}{\refCom{exb@isin}}{}
@@ -675,7 +724,9 @@ Distance above Problem \# header
 \addcontentsline{mac}{macro}{\refCom{exercisebanksetup}}{}
 \addcontentsline{mac}{macro}{\refCom{introMargin}}{}
 \addcontentsline{mac}{macro}{\refCom{makeset}}{}
+\addcontentsline{mac}{macro}{\refCom{makesetdefaults}}{}
 \addcontentsline{mac}{macro}{\refCom{nextproblem}}{}
+\addcontentsline{mac}{macro}{\refCom{orderedselect}}{}
 \addcontentsline{mac}{macro}{\refCom{ownLineNoSpacesGotIt}}{}
 \addcontentsline{mac}{macro}{\refCom{pMarginAbove}}{}
 \addcontentsline{mac}{macro}{\refCom{pMarginBelow}}{}
@@ -748,13 +799,16 @@ Distance above Problem \# header
     \change{Introducing \refCom{buildsets}-command for building more than one set at a time.}
     \change{Ability to add front page with the \refKey{front page} setup-key.}
     \change{You can now remove the forced margin setup with \refKey{style margins}.}
-\newversion{v0.2.1-prerelease 2018/09/10}
+\newversion{v0.2.1-prerelease 2018/09/12}
     \change{Added options for individual part problems using the \dac{nextproblem}-command}
     \change{Added tagging for part problems using using the \dac{nextproblem}-command and \dac{buildtags}-commands.}
     \change{Fixed problems related to \dac{ShowNumbers} not showing correctly.}
     \change{Fixed \dac{exec} so that it now can take paragraphs (made it \dac{long})}
     \change{Added point system}
     \change{Fixed bug where vertical space would remain when intro environment hidden}
+    \change{\dac\DeclareExerciseCommand~now takes args}
+    \change{Keys sent to \dac\makeset can now be sent to \dac\buildset~and~\dac\buildsets}
+    \change{Introducing \dac\makesetdefaults}
 \chlogtable
 
 
